calculator project part

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <br /><br />
         <span class="demo" id=".calc">&#9654; Demo</span><br /><br />
         <div class="calc demo_cont">
-            
+            <div class="input" id="input"></div>
+            <div class="result" id="result">0</div>
+            <div class="buttons">
+            <div class="main">
             <button class="open_brace">(</button>
             <button class="close_brace">)</button>
             <button class="clr">C</button>
