--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <div class="title" id="t1">
         1. Calculator
     </div>
-    
+    <div class="description" id="d1">
+        <span>Beginner</span><br>Make a calculator with basic operations like addition, subtraction, multiplication, division, percentage and clear all.<br><br>
+        <span>Advanced</span><br>Make a scientific Calculator with Logarithmic and Trigonometric Operations.
+        <br /><br />
         <span class="demo" id=".calc">&#9654; Demo</span><br /><br />
         <div class="calc demo_cont">
             <div class="input" id="input"></div>
