--- a/index.html
+++ b/index.html
@@ -242,7 +242,11 @@ range.selectNode(document.getElementById(id));
     window.getSelection().addRange(range);
     document.execCommand("copy");
     window.getSelection().removeAllRanges();
-   
+    $(p).toggle();
+   setTimeout(function(){
+      $(p).toggle();
+   },500)
+   }
 </script>
 </div>
 <div class="description" id="d5">
