--- a/index.html
+++ b/index.html
@@ -241,7 +241,10 @@ range.selectNode(document.getElementById(id));
     window.getSelection().removeAllRanges();
     window.getSelection().addRange(range);
     document.execCommand("copy");
-    
+    window.getSelection().removeAllRanges();
+    $(p).toggle();
+   setTimeout(function(){
+      $(p).toggle();
    },500)
    }
 </script>
