--- a/index.html
+++ b/index.html
@@ -252,7 +252,15 @@ range.selectNode(document.getElementById(id));
 <div class="description" id="d5">
     <span>Beginner</span><br>Create stopwatch with three basic functions: Start,Stop and Reset.
     <br /><br />
-    
+    <span class="demo" id=".stop_watch">&#9654; Demo</span><br /> <br />
+    <div class="stop_watch demo_cont" id="sw">
+        <div class="timer" id="timer">00:00:00</div>
+        <div class="btns">
+        <button id="start">START</button>
+        <button id="stop">STOP</button>
+        <button id="reset">RESET</button>
+        <button id="lap">LAP</button>
+        </div> 
     </div>
     <div class="title" id="t5">
         5. Stop Watch
